[tool.poetry]
name = "minseeper-python"
version = "0.1.0"
description = ""
authors = ["tag1216 <taguti1216@gmail.com>"]
readme = "README.md"
packages = [{include = "mineseeper"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
